Bug 76316 - DOCX : CORRUPTION : FIle gets corrupt after Roundtrip
Summary: DOCX : CORRUPTION : FIle gets corrupt after Roundtrip
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: pallavi.jadhav
URL:
Whiteboard: target:4.3.0
Keywords:
: 75946 (view as bug list)
Depends on:
Blocks: DOCX-SAXParse
  Show dependency treegraph
 
Reported: 2014-03-18 12:41 UTC by pallavi.jadhav
Modified: 2022-07-20 05:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Contains table having Hyperlinks (841.09 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-18 12:41 UTC, pallavi.jadhav
Details
File contains Nested Hyperlinks (99.90 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-03-21 05:35 UTC, pallavi.jadhav
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pallavi.jadhav 2014-03-18 12:41:56 UTC
Created attachment 95997 [details]
Contains table having Hyperlinks

Steps to reproduce :
1] Open attached document in LO
2] Perform save_as
3] Open saved file in MS Office 2010

Current behavior :
File gets corrupted after Roundtrip.

Expected behavior :
File should get open in MS Office 2010 without any corruption.


Issue description :
For XML tag <w:hyperlink> there is no end tag. 
End Tag missing for <w:hyperlink> in document.xml.

XML difference :

Original file
<w:p>
   <w:hyperlink>
      <w:hyperlink>
      </w:hyperlink>
   </w:hyperlink>
</w:p>

RT file,   
<w:p>
   <w:hyperlink>
      <w:hyperlink>
      </w:hyperlink>
</w:p>
Comment 1 Jorendc 2014-03-18 16:52:52 UTC
I can confirm a corruption, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 87efec9cc27b18aa09e50c289b503ba1127eb0b8
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-18_02:50:50

Document opened using Word 2010.

Kind regards,
Joren
Comment 2 Björn Michaelsen 2014-03-19 11:20:51 UTC
*** Bug 75946 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2014-03-19 13:53:37 UTC
Pallavi Jadhav committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20a3792502120d67b1a9fdea641e15ea504359d3

fdo#76316 : File gets corrupt after Roundtrip



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-03-20 13:10:24 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6dfe9bc622afe77b61789f044edf749d245562f5

fdo#76316 make this test file more minimal



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 pallavi.jadhav 2014-03-21 05:35:44 UTC
Created attachment 96137 [details]
File contains Nested Hyperlinks
Comment 6 pallavi.jadhav 2014-03-21 05:36:56 UTC
Attached another file "2111004041.docx" with less data.